Example App: code review refactors and tidy ups